# pca_anomaly_detection

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
docs/: MAI5002 - GRUPO 1 - Detecção de Anomalias com PCA.pptx  apresentacao_trabalho_final_pca.pptx  orientacao_apresentacao.md  orientacao_wmecai.md
notebooks/: 01_pca_tep_setup.ipynb  02_eda_tennessee_eastman.ipynb  PCA_Fault_Detection_TEP.ipynb  PCA_anomaly_detection_TEP.ipynb
references/: references.bib
src/data/: build_processed.py  get_data.py  process_data.py
src/pca_anomaly_detection/: __init__.py  config.py
src/pca_anomaly_detection/data/: io.py  preprocessing.py
src/pca_anomaly_detection/evaluation/: __init__.py  metrics.py
src/pca_anomaly_detection/models/: __init__.py  pca_detector.py
src/scripts/: detect_anomalies.py  train_pca.py
